log
Thu 05 Oct 2023 01:31:07 AM UTC: 
 tests:  0|5
total_score: 0/70
5a37541
Thu 05 Oct 2023 04:51:15 AM UTC: 
 sudoku.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:55:9: error: invalid use of incomplete typedef ‘List’
   55 |     list->head = NULL;
      |         ^~
Compilation failed
35acbcd
Fri 06 Oct 2023 11:29:09 PM UTC: 
 sudoku.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:55:3: error: expected ‘,’ or ‘;’ before ‘return’
   55 |   return list;
      |   ^~~~~~
sudoku.c:54:9: error: unused variable ‘list’ [-Werror=unused-variable]
   54 |   List* list = createList()
      |         ^~~~
sudoku.c:57:1: error: control reaches end of non-void function [-Werror=return-type]
   57 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
e745afb
Fri 06 Oct 2023 11:29:30 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
1447f1d
Fri 06 Oct 2023 11:30:12 PM UTC: 
 sudoku.c | 25 +++++++++++++++++++++++++
 1 file changed, 25 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:77:9: error: implicit declaration of function ‘insertEnd’ [-Werror=implicit-function-declaration]
   77 |         insertEnd(list, new_node);
      |         ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
354b507
Fri 06 Oct 2023 11:31:47 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
3890ddb
Fri 06 Oct 2023 11:37:55 PM UTC: 
 sudoku.c | 57 ++++++++++++++++++++++++++++++++++++++++++++++++---------
 1 file changed, 48 insertions(+), 9 deletions(-)
 tests:  2|4
total_score: 15/70
ae2ec4c
Fri 06 Oct 2023 11:39:36 PM UTC: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:58:45: error: expected ‘)’ before ‘{’ token
   58 |       if (num != 0 && row_check[i][num] == 1
      |          ~                                  ^
      |                                             )
   59 |       {
      |       ~                                      
sudoku.c:78:7: error: expected expression before ‘}’ token
   78 |       }
      |       ^
sudoku.c:50:7: error: unused variable ‘submatrix_check’ [-Werror=unused-variable]
   50 |   int submatrix_check[9][10] = {0}; // 9 submatrices de 3x3, 10 números
      |       ^~~~~~~~~~~~~~~
sudoku.c:49:7: error: unused variable ‘col_check’ [-Werror=unused-variable]
   49 |   int col_check[9][10] = {0}; // 9 columnas, 10 números
      |       ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
9c4c3a9
Fri 06 Oct 2023 11:47:26 PM UTC: 
 sudoku.c | 55 +++++++++++++++++++++++++++++++++++++++----------------
 1 file changed, 39 insertions(+), 16 deletions(-)
 tests:  5|3
total_score: 35/70
c9db70f
Fri 06 Oct 2023 11:48:58 PM UTC: 
 sudoku.c | 63 ++++++++++++++++++++++++++++-----------------------------------
 1 file changed, 28 insertions(+), 35 deletions(-)
In file included from test.c:5:
sudoku.c:98:1: error: expected identifier or ‘(’ before ‘}’ token
   98 | }
      | ^
Compilation failed
40106b0
Fri 06 Oct 2023 11:49:12 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
9cef609
Fri 06 Oct 2023 11:56:00 PM UTC: 
 sudoku.c | 71 +++++++++++++++++++++++++++++++++++++---------------------------
 1 file changed, 41 insertions(+), 30 deletions(-)
 tests:  5|3
total_score: 35/70
6b1ee2f
Sat 07 Oct 2023 12:00:37 AM UTC: 
 sudoku.c | 18 ++++++++++++------
 1 file changed, 12 insertions(+), 6 deletions(-)
test.c: In function ‘get_adj_nodes’:
test.c:245:5: error: ‘main’ is normally a non-static function [-Werror=main]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:262:1: error: expected declaration or statement at end of input
  262 | }
      | ^
test.c:263: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:245:5: error: ‘main’ defined but not used [-Werror=unused-function]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:7:8: error: ‘_strdup’ defined but not used [-Werror=unused-function]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
d7a7faa
Sat 07 Oct 2023 12:03:34 AM UTC: 
 sudoku.c | 37 ++++++++++---------------------------
 1 file changed, 10 insertions(+), 27 deletions(-)
 tests:  6|2
total_score: 45/70
e2d4bcb
Sat 07 Oct 2023 12:04:33 AM UTC: 
 sudoku.c | 14 +++++++-------
 1 file changed, 7 insertions(+), 7 deletions(-)
 tests:  6|2
total_score: 45/70
e831ad8
Sat 07 Oct 2023 12:09:06 AM UTC: 
 sudoku.c | 20 +++++++++++++-------
 1 file changed, 13 insertions(+), 7 deletions(-)
 tests:  6|2
total_score: 45/70
fe150e4
Sat 07 Oct 2023 12:11:39 AM UTC: 
 sudoku.c | 9 +++++++++
 1 file changed, 9 insertions(+)
test.c: In function ‘is_final’:
test.c:245:5: error: ‘main’ is normally a non-static function [-Werror=main]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:262:1: error: expected declaration or statement at end of input
  262 | }
      | ^
test.c:263: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:245:5: error: ‘main’ defined but not used [-Werror=unused-function]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:7:8: error: ‘_strdup’ defined but not used [-Werror=unused-function]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
c102ae8
Sat 07 Oct 2023 12:12:45 AM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
sudoku.c: In function ‘is_final’:
sudoku.c:157:1: error: control reaches end of non-void function [-Werror=return-type]
  157 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
7809fb3
Sat 07 Oct 2023 12:14:03 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
test.c: In function ‘is_final’:
test.c:245:5: error: ‘main’ is normally a non-static function [-Werror=main]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:262:1: error: expected declaration or statement at end of input
  262 | }
      | ^
test.c:263: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:245:5: error: ‘main’ defined but not used [-Werror=unused-function]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:7:8: error: ‘_strdup’ defined but not used [-Werror=unused-function]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
a678db5
Sat 07 Oct 2023 12:14:11 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_final’:
sudoku.c:157:1: error: control reaches end of non-void function [-Werror=return-type]
  157 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
627e4b8
Sat 07 Oct 2023 12:15:14 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_final’:
sudoku.c:157:1: error: control reaches end of non-void function [-Werror=return-type]
  157 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
743059a
Sat 07 Oct 2023 12:15:36 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_final’:
sudoku.c:157:1: error: control reaches end of non-void function [-Werror=return-type]
  157 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
a2ec576
Sat 07 Oct 2023 12:15:58 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_final’:
sudoku.c:157:1: error: control reaches end of non-void function [-Werror=return-type]
  157 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
75eb7ff
Sat 07 Oct 2023 12:16:33 AM UTC: 
 sudoku.c | 10 ----------
 1 file changed, 10 deletions(-)
 tests:  6|2
total_score: 45/70
f9eaa73
Sat 07 Oct 2023 12:18:06 AM UTC: 
 sudoku.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  6|2
total_score: 45/70
6235999
Sat 07 Oct 2023 12:19:17 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
64b3c40
Sat 07 Oct 2023 12:19:31 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
0961883
Sat 07 Oct 2023 12:20:03 AM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  6|2
total_score: 45/70
03a5ffc
Sat 07 Oct 2023 12:20:53 AM UTC: 
 sudoku.c | 11 +++--------
 1 file changed, 3 insertions(+), 8 deletions(-)
 tests:  7|1
total_score: 55/70
e8a86d6
